force-app/main/default/objects/Account/fields/Address_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Address_Type_Code__c</fullName>
    <label>Address Type Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>