force-app/main/default/objects/Account/fields/Average_Order_Value__c.field-meta.xml
<CustomField>
    <fullName>Average_Order_Value__c</fullName>
    <label>Average Order Value</label>
    <description>Customer Lifetime Spend divided by Number of Orders. System-maintained by OrderCustomerMetricsTrigger; do not edit manually.</description>
    <inlineHelpText>Automatically calculated from this account's orders.</inlineHelpText>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>