force-app/main/default/objects/Account/fields/Civil_ID__c.field-meta.xml
<CustomField>
    <fullName>Civil_ID__c</fullName>
    <label>Civil ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>