force-app/main/default/objects/Account/fields/Customer_Lifetime_Spend__c.field-meta.xml
<CustomField>
    <fullName>Customer_Lifetime_Spend__c</fullName>
    <description>Sum of TotalAmount across all qualifying Orders for this Account. System-maintained by OrderCustomerMetricsTrigger; do not edit manually.</description>
    <inlineHelpText>Automatically calculated from this account&apos;s orders.</inlineHelpText>
    <label>Customer Lifetime Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>