force-app/main/default/objects/Account/fields/Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segment__c</fullName>
    <label>Customer Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>High Net Worth</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>High Value</fullName>
                <isActive>false</isActive>
                <label>High Value</label>
            </value>
            <value>
                <fullName>Loyalty</fullName>
                <isActive>false</isActive>
                <label>Loyalty</label>
            </value>
            <value>
                <fullName>Occasional</fullName>
                <isActive>false</isActive>
                <label>Occasional</label>
            </value>
            <value>
                <fullName>Online</fullName>
                <isActive>false</isActive>
                <label>Online</label>
            </value>
            <value>
                <fullName>Walk-in</fullName>
                <isActive>false</isActive>
                <label>Walk-in</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>