force-app/main/default/objects/Account/fields/Duplicate_Of__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Of__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Set by CARAOrderSyncService when an SFCC order&apos;s email matched this Account but the order&apos;s customerId didn&apos;t match this Account&apos;s External_ID__c. Points at the original Account so Ops can find and reconcile the two identities.</description>
    <label>Duplicate Of</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Duplicate Accounts</relationshipLabel>
    <relationshipName>Duplicate_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>