force-app/main/default/objects/Account/fields/Loyalty_Tier_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Tier_Benefits__c</fullName>
    <label>Loyalty Tier Benefits</label>
    <length>255</length>
    <type>Text</type>
</CustomField>