force-app/main/default/objects/Account/fields/Mobile_WhatsApp_Number__c.field-meta.xml
<CustomField>
    <fullName>Mobile_WhatsApp_Number__c</fullName>
    <label>Mobile / WhatsApp Number</label>
    <type>Phone</type>
</CustomField>