force-app/main/default/objects/Account/fields/Nationality_Code__c.field-meta.xml
<CustomField>
    <fullName>Nationality_Code__c</fullName>
    <label>Nationality Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>