force-app/main/default/objects/Account/fields/Number_of_Orders__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Orders__c</fullName>
    <description>Count of qualifying Orders for this Account. System-maintained by OrderCustomerMetricsTrigger; do not edit manually.</description>
    <inlineHelpText>Automatically calculated from this account&apos;s orders.</inlineHelpText>
    <label>Number of Orders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>