force-app/main/default/objects/Account/fields/Preferred_Currency__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Currency__c</fullName>
    <label>Preferred Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>KWD</fullName><default>false</default><label>KWD</label></value>
            <value><fullName>USD</fullName><default>false</default><label>USD</label></value>
            <value><fullName>EUR</fullName><default>false</default><label>EUR</label></value>
            <value><fullName>GBP</fullName><default>false</default><label>GBP</label></value>
            <value><fullName>AED</fullName><default>false</default><label>AED</label></value>
            <value><fullName>SAR</fullName><default>false</default><label>SAR</label></value>
            <value><fullName>QAR</fullName><default>false</default><label>QAR</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>