force-app/main/default/objects/Account/fields/Preferred_Store__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Store__c</fullName>
    <label>Preferred Store</label>
    <length>255</length>
    <type>Text</type>
</CustomField>