force-app/main/default/objects/Account/fields/Tier_1_Customer__c.field-meta.xml
<CustomField>
    <fullName>Tier_1_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True for the top 10% of eligible customers by Customer_Lifetime_Spend__c. Recalculated by CustomerTier1RankingBatch; do not edit manually. Consumed by Data Cloud as the Tier-1 segment qualification flag.</description>
    <inlineHelpText>Automatically set for the top 10 percent of eligible customers ranked by Lifetime Spend.</inlineHelpText>
    <label>Tier-1 Customer</label>
    <type>Checkbox</type>
</CustomField>